fix: text-align was fixed

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ p{
     align-items: center;
   } */
   .report-name {
-    text-align: center;
+    text-align: start;
     width: 100%;
     position: relative;
     display: inline-block;
